--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.6"
   },
